# midgy

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  test.yml
branch/multi-langauge/: 404.html  index.html  sitemap.xml
branch/multi-langauge/design/: index.html
branch/multi-langauge/language/: index.html
branch/multi-langauge/language/basics/: index.html
branch/multi-langauge/language/code_fences/: index.html
branch/multi-langauge/language/container_blocks/: index.html
branch/multi-langauge/language/doctest/: index.html
branch/multi-langauge/language/flags/: index.html
branch/multi-langauge/language/front_matter/: index.html
branch/multi-langauge/language/line_continuations/: index.html
branch/multi-langauge/language/magics/: index.html
branch/multi-langauge/language/mixed/: index.html
branch/multi-langauge/midgy/: index.html
branch/multi-langauge/programs/command-line-with-typer/: index.html
branch/multi-langauge/search/: search_index.json
design/: index.html
docs/: language.md  test_language.py
docs/language/: README.md  basics.md  code_fences.md  doctest.md  flags.md  front_matter.md  line_continuations.md  magics.md  test_language.py
language/: index.html
language/basics/: index.html
language/code_fences/: index.html
language/container_blocks/: index.html
language/doctest/: index.html
language/flags/: index.html
language/front_matter/: index.html
language/line_continuations/: index.html
language/magics/: index.html
language/mixed/: index.html
midgy/: index.html
programs/command-line-with-typer/: index.html
search/: search_index.json
src/midgy/: __init__.py  __main__.py  _argparser.py  _ipython.py  _magics.py  containers.py  front_matter.py  inspect.py  ipy.py  lex.py  lexers.py  loader.py  main.py  md.py  midgy.py  mod.py  py.py  python.py  render.py  run.py  tangle.py  tools.py  types.py  weave.py  weave_ipython.py
src/midgy/language/: python.py
tests/: __main__.py
